--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+.idea
+/config
+
+.DS_Store
+node_modules
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+.vercel
+.output
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+
+
+
 # Logs
 logs
 *.log
@@ -69,7 +87,6 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
