--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "ical.js": "^1.5.0",
     "js-yaml": "^4.1.0",
     "svelte-particles": "^2.5.3",
-    "trianglify": "^4.1.1",
+    "@victorioberra/trianglify-browser": "^4.1.1",
     "tsparticles": "^2.5.3"
   },
   "type": "module"
