--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "tailwindcss": "^3.2.4",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
+    "lodash.debounce": "^4.0.8",
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "@victorioberra/trianglify-browser": "^4.1.1",
     "ical.js": "^1.5.0",
     "js-yaml": "^4.1.0",
     "svelte-particles": "^2.5.3",
-    "@victorioberra/trianglify-browser": "^4.1.1",
     "tsparticles": "^2.5.3"
   },
   "type": "module"
