--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "lodash.debounce": "^4.0.8",
+    "lodash.clonedeep": "^4.5.0",
     "postcss": "^8.4.19",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.8.1",
