--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@sveltejs/adapter-node": "^1.3.0",
+    "@sveltejs/adapter-node": "=1.2.4",
     "@sveltejs/kit": "^1.21.0",
     "@types/cookie": "^0.5.1",
     "@types/js-yaml": "^4.0.5",
