chore: fix deps problem

--- a/package.json
+++ b/package.json
@@ -6,29 +6,20 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@sveltejs/adapter-node": "=1.2.4",
+    "@sveltejs/adapter-node": "^1.2.4",
     "@sveltejs/kit": "^1.22.3",
     "@types/cookie": "^0.5.1",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^20.4.2",
-    "@typescript-eslint/eslint-plugin": "^6.1.0",
-    "@typescript-eslint/parser": "^5.60.1",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.43.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-svelte3": "^4.0.0",
     "lodash.debounce": "^4.0.8",
     "lodash.clonedeep": "^4.5.0",
     "postcss": "^8.4.27",
-    "prettier": "^3.0.0",
-    "prettier-plugin-svelte": "^2.10.1",
     "svelte": "^3.59.2",
     "svelte-check": "^3.4.6",
     "svelte-fa": "^3.0.4",
