chore: upgrade sveltekit and deps

--- a/package.json
+++ b/package.json
@@ -1,33 +1,44 @@
 {
   "name": "hubleys",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint:check": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format:check": "prettier --check .",
+    "format:fix": "prettier --write ."
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@sveltejs/adapter-node": "^1.2.4",
-    "@sveltejs/kit": "^1.29.1",
+    "@sveltejs/adapter-node": "^2.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@types/cookie": "^0.6.0",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.10.5",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.16",
-    "lodash.debounce": "^4.0.8",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.35.1",
     "lodash.clonedeep": "^4.5.0",
-    "postcss": "^8.4.32",
+    "lodash.debounce": "^4.0.8",
+    "prettier": "^3.1.1",
+    "prettier-plugin-svelte": "^3.1.2",
+    "prettier-plugin-tailwindcss": "^0.5.9",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
     "svelte-fa": "^3.0.4",
-    "svelte-preprocess": "^5.1.3",
     "tailwindcss": "^3.3.6",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vite": "^4.5.1"
+    "vite": "^5.0.0"
   },
   "dependencies": {
     "@victorioberra/trianglify-browser": "^4.1.1",
