--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
-	"useTabs": true,
-	"singleQuote": false,
-	"trailingComma": "none",
-	"printWidth": 100,
-	"semi": false,
-	"plugins": ["prettier-plugin-svelte"],
-	"pluginSearchDirs": ["."],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+  "useTabs": false,
+  "singleQuote": true,
+  "trailingComma": "none",
+  "printWidth": 160,
+  "semi": false,
+  "arrowParens": "avoid",
+  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+  "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
