--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
     "svelte-fa": "^3.0.4",
+    "sveltekit-i18n": "^2.4.2",
     "tailwindcss": "^3.3.6",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
