--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint:check": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format:check": "prettier --check .",
-    "format:fix": "prettier --write ."
+    "format:check": "prettier --check src",
+    "format:fix": "prettier --write src"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
