fix: simplify admin ui and system config handling

--- a/src/lib/server/sysconfig/default.yml
+++ b/src/lib/server/sysconfig/default.yml
@@ -13,6 +13,9 @@ search_engines:
 #  - url: https://onlinekalender.info/feiertage/deutschland/berlin.ics
 #    allow: true
 
+messages:
+  - content: test
+    allow: true
 
 tiles:
   - title: Logout
