chore: fix ci build missing version info

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -57,7 +57,9 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64 #,linux/arm,linux/aarch64
+          build-args: |
+            PUBLIC_VERSION=${{ github.ref_name }}
+          platforms: linux/amd64,linux/arm64 #,linux/arm,linux/aarch64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
