--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
-    "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
@@ -35,6 +34,7 @@
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
     "svelte-fa": "^3.0.4",
+    "@tsparticles/svelte": "^3.0.0",
     "sveltekit-i18n": "^2.4.2",
     "tailwindcss": "^3.3.6",
     "tslib": "^2.6.2",
@@ -45,8 +45,7 @@
     "@victorioberra/trianglify-browser": "^4.1.1",
     "ical.js": "^1.5.0",
     "js-yaml": "^4.1.0",
-    "svelte-particles": "^2.12.0",
-    "tsparticles": "^2.12.0"
+    "tsparticles": "^3.0.0"
   },
   "type": "module"
 }
