--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@sveltejs/adapter-node": "^2.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tsparticles/svelte": "^3.0.0",
     "@types/cookie": "^0.6.0",
     "@types/js-yaml": "^4.0.9",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -34,7 +36,6 @@
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
     "svelte-fa": "^3.0.4",
-    "@tsparticles/svelte": "^3.0.0",
     "sveltekit-i18n": "^2.4.2",
     "tailwindcss": "^3.3.6",
     "tslib": "^2.6.2",
