--- a/src/lib/server/sysconfig/default.yml
+++ b/src/lib/server/sysconfig/default.yml
@@ -5,7 +5,6 @@ search_engines:
     allow: true
   - title: Startpage
     search_url: https://www.startpage.com/sp/search
-    autocomplete_url: https://www.startpage.com/suggestions?segment=startpage.udog&lui=english
     allow: true
 
 #calendars:
@@ -17,7 +16,7 @@ messages:
       <h1 style="font-size: 18pt">Welcome to hubleys!</h1>
       <p>What you see here is the default example configuration.</p>
       <p>Edit the <code>config.yml</code> file to customize your setup <b>:)</b></p>
-      <hr>
+      <hr style="border-style: dotted">
       <footer style="font-size: 11pt; text-align: right">
         Find hubleys documentation on 
         <a href="https://github.com/knrdl/hubleys-dashboard" target="_blank" rel="noopener noreferrer">Github</a>.
@@ -27,7 +26,7 @@ messages:
 tiles:
   - title: Logout
     url: https://example.org/logout/
-    logo: authelia.png # a tile can have a `logo` (image) and an `emoji` (text). Logos have precedence. At least a `logo` or an `emoji` should be present for a tile
+    logo: authelia # a tile can have a `logo` (image) and an `emoji` (text). Logos have precedence. At least a `logo` or an `emoji` should be present for a tile
     allow: true # show to everybody
 
   - title: Admin
@@ -35,13 +34,14 @@ tiles:
     menu:
       - title: PiHole
         url: https://example.org/pihole/
-        logo: pihole.svg
+        logo: pihole
       - title: Portainer
         url: https://example.org/portainer/
-        logo: portainer.svg
+        logo: portainer
       - title: Speedtest
         url: https://example.org/speedtest/
-        logo: librespeed.png
+        logo: librespeed
+        allow: [group:example-group1] # access to menu items can also be restricted
 
   - title: Hidden
     url: https://example.org
@@ -52,7 +52,7 @@ tiles:
     allow: true
     menu: # tiles can have nested menus
       - title: Cats
-        allow: [group:example-group1] # access to menu items can also be restricted
+        deny: [group:dog-lovers]
         menu:
           - title: Cat1
             emoji: 🐈
@@ -61,6 +61,7 @@ tiles:
             emoji: 🐈
             url: https://http.cat/
       - title: Dogs
+        deny: [group:cat-lovers]
         menu:
           - title: Dog1
             emoji: 🐶
@@ -70,23 +71,26 @@ tiles:
             url: https://httpstatusdogs.com/
 
   - title: Grafana
+    subtitle: Monitoring
     # logo can be a local file or point to a web image, see README.md section "I need more icons"
-    logo: grafana.svg # or: https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/png/grafana.png
+    logo: grafana # or: https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/png/grafana.png
     url: https://grafana.com/
     allow: true
     menu:
-      - title: Dashboard 1
-        emoji: 📈
-        url: https://example.org/dashboard1/
-      - title: Dashboard 2
-        emoji: 📉
-        url: https://example.org/dashboard2/
-      - title: Dashboard 3
-        emoji: 📊
-        url: https://example.org/dashboard3/
-      - title: Dashboard 4
-        emoji: 💹
-        url: https://example.org/dashboard4/
+      title: Grafana Dashboards
+      tiles:
+        - title: Dashboard 1
+          emoji: 📈
+          url: https://example.org/dashboard1/
+        - title: Dashboard 2
+          emoji: 📉
+          url: https://example.org/dashboard2/
+        - title: Dashboard 3
+          emoji: 📊
+          url: https://example.org/dashboard3/
+        - title: Dashboard 4
+          emoji: 💹
+          url: https://example.org/dashboard4/
 
   - title: Sverdle
     url: /sverdle/
