feat: customizable search url params

--- a/src/lib/server/sysconfig/default.yml
+++ b/src/lib/server/sysconfig/default.yml
@@ -6,10 +6,18 @@ search_engines:
   - title: Startpage
     search_url: https://www.startpage.com/sp/search
     allow: true
+  - title: Wikipedia
+    search_url: https://wikipedia.org/w/index.php
+    search_parameter: search  # the url parameter which holds the query term (default: "q")
+    allow: true
 
-#calendars:
-#  - url: https://onlinekalender.info/feiertage/deutschland/berlin.ics
-#    allow: true
+
+# calendars:
+#   - url: https://onlinekalender.info/feiertage/deutschland/berlin.ics
+#     allow: true
+#   - url: https://username:password@www.example.org/calendar.ical
+#     allow: [user:me]
+
 
 messages:
   - html: |
