--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
     "lodash.debounce": "^4.0.8",
+    "mrmime": "^2.0.0",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
-    "svelte-fa": "^3.0.4",
+    "svelte-fa": "^4.0.1",
     "sveltekit-i18n": "^2.4.2",
     "tailwindcss": "^3.3.6",
     "tslib": "^2.6.2",
