fix: also allow _parent and _top as link targets #260

--- a/src/lib/server/sysconfig/default.yml
+++ b/src/lib/server/sysconfig/default.yml
@@ -22,8 +22,8 @@ search_engines:
     search_url: https://www.wolframalpha.com/input
     search_parameter: i
     allow: true
-    # tab: 'new'  # the default, will open search results in a new tab
-    # tab: 'same'  # will replace the hubleys tab with the search results
+    # target: 'new-tab'  # the default, will open search results in a new tab
+    # target: 'same-tab'  # will replace the hubleys tab with the search results
 
 # calendars:
 #   - url: https://onlinekalender.info/feiertage/deutschland/berlin.ics
@@ -95,8 +95,8 @@ sections: # divides your tiles into sections (optional)
                   only_icon: true
                   url:
                     value: https://github.com/cmatsuoka/asciiquarium
-                    # tab: 'new'  # the default, will open the link in a new tab
-                    tab: 'same' # will open the link in the current tab
+                    # target: 'new-tab'  # the default, will open the link in a new tab
+                    target: 'same-tab' # will open the link in the current tab
 
       - title: Sverdle
         url: /sverdle/
