--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@sveltejs/adapter-node": "^5.2.12",
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@tailwindcss/postcss": "^4.0.12",
+    "@tailwindcss/vite": "^4.0.12",
     "@tsparticles/svelte": "^3.1.1",
     "@types/cookie": "^0.6.0",
     "@types/js-yaml": "^4.0.9",
@@ -25,7 +27,6 @@
     "@types/node": "^22.10.10",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.25.0",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-svelte": "^2.46.0",
@@ -33,12 +34,12 @@
     "mrmime": "^2.0.0",
     "prettier": "^3.5.0",
     "prettier-plugin-svelte": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.10",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "svelte": "^4.2.19",
     "svelte-check": "^4.1.4",
     "svelte-fa": "^4.0.3",
     "sveltekit-i18n": "^2.4.2",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^4.0.12",
     "tslib": "^2.7.0",
     "typescript": "^5.7.3",
     "vite": "^5.4.14"
